03-Service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: test-sre
  namespace: test-sre
  labels:
    app: test-sre
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: test-sre
